cmake_minimum_required(VERSION 3.5)
project(main)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -DDEBUG")

include_directories(com)

set(SOURCE_FILES
        docs/code/cgi/main.c
        docs/code/cgi/tick.c
        docs/code/detach/main.c
        docs/code/dns/main.c
        docs/code/helloworld/main.c
        docs/code/idle-basic/main.c
        docs/code/idle-compute/main.c
        docs/code/interfaces/main.c
        docs/code/locks/main.c
        docs/code/multi-echo-server/main.c
        docs/code/multi-echo-server/worker.c
        docs/code/onchange/main.c
        docs/code/pipe-echo-server/main.c
        docs/code/plugin/hello.c
        docs/code/plugin/main.c
        docs/code/plugin/plugin.h
        docs/code/proc-streams/main.c
        docs/code/proc-streams/test.c
        docs/code/progress/main.c
        docs/code/queue-cancel/main.c
        docs/code/queue-work/main.c
        docs/code/ref-timer/main.c
        docs/code/signal/main.c
        docs/code/spawn/main.c
        docs/code/tcp-echo-server/main.c
        docs/code/thread-create/main.c
        docs/code/tty/main.c
        docs/code/tty-gravity/main.c
        docs/code/udp-dhcp/main.c
        docs/code/uvcat/main.c
        docs/code/uvstop/main.c
        docs/code/uvtee/main.c
        docs/code/uvwget/main.c
        include/android-ifaddrs.h
        include/pthread-barrier.h
        include/stdint-msvc2008.h
        include/tree.h
        include/uv-aix.h
        include/uv-bsd.h
        include/uv-darwin.h
        include/uv-errno.h
        include/uv-linux.h
        include/uv-os390.h
        include/uv-posix.h
        include/uv-sunos.h
        include/uv-threadpool.h
        include/uv-unix.h
        include/uv-version.h
        include/uv-win.h
        include/uv.h
        samples/socks5-proxy/client.c
        samples/socks5-proxy/defs.h
        samples/socks5-proxy/getopt.c
        samples/socks5-proxy/main.c
        samples/socks5-proxy/s5.c
        samples/socks5-proxy/s5.h
        samples/socks5-proxy/server.c
        samples/socks5-proxy/util.c
        src/unix/aix-common.c
        src/unix/aix.c
        src/unix/android-ifaddrs.c
        src/unix/async.c
        src/unix/atomic-ops.h
        src/unix/bsd-ifaddrs.c
        src/unix/core.c
        src/unix/cygwin.c
        src/unix/darwin-proctitle.c
        src/unix/darwin.c
        src/unix/dl.c
        src/unix/freebsd.c
        src/unix/fs.c
        src/unix/fsevents.c
        src/unix/getaddrinfo.c
        src/unix/getnameinfo.c
        src/unix/ibmi.c
        src/unix/internal.h
        src/unix/kqueue.c
        src/unix/linux-core.c
        src/unix/linux-inotify.c
        src/unix/linux-syscalls.c
        src/unix/linux-syscalls.h
        src/unix/loop-watcher.c
        src/unix/loop.c
        src/unix/netbsd.c
        src/unix/no-fsevents.c
        src/unix/no-proctitle.c
        src/unix/openbsd.c
        src/unix/os390-syscalls.c
        src/unix/os390-syscalls.h
        src/unix/os390.c
        src/unix/pipe.c
        src/unix/poll.c
        src/unix/posix-hrtime.c
        src/unix/posix-poll.c
        src/unix/process.c
        src/unix/procfs-exepath.c
        src/unix/proctitle.c
        src/unix/pthread-fixes.c
        src/unix/signal.c
        src/unix/spinlock.h
        src/unix/stream.c
        src/unix/sunos.c
        src/unix/sysinfo-loadavg.c
        src/unix/sysinfo-memory.c
        src/unix/tcp.c
        src/unix/thread.c
        src/unix/timer.c
        src/unix/tty.c
        src/unix/udp.c
        src/fs-poll.c
        src/heap-inl.h
        src/inet.c
        src/queue.h
        src/threadpool.c
        src/uv-common.c
        src/uv-common.h
        src/uv-data-getter-setters.c
        src/version.c
        test/benchmark-async-pummel.c
        test/benchmark-async.c
        test/benchmark-fs-stat.c
        test/benchmark-getaddrinfo.c
        test/benchmark-list.h
        test/benchmark-loop-count.c
        test/benchmark-million-async.c
        test/benchmark-million-timers.c
        test/benchmark-multi-accept.c
        test/benchmark-ping-pongs.c
        test/benchmark-pound.c
        test/benchmark-pump.c
        test/benchmark-sizes.c
        test/benchmark-spawn.c
        test/benchmark-tcp-write-batch.c
        test/benchmark-thread.c
        test/benchmark-udp-pummel.c
        test/blackhole-server.c
        test/dns-server.c
        test/echo-server.c
        test/run-benchmarks.c
        test/run-tests.c
        test/runner-unix.c
        test/runner-unix.h
        test/runner-win.c
        test/runner-win.h
        test/runner.c
        test/runner.h
        test/task.h
        test/test-active.c
        test/test-async-null-cb.c
        test/test-async.c
        test/test-barrier.c
        test/test-callback-order.c
        test/test-callback-stack.c
        test/test-close-fd.c
        test/test-close-order.c
        test/test-condvar.c
        test/test-connect-unspecified.c
        test/test-connection-fail.c
        test/test-cwd-and-chdir.c
        test/test-default-loop-close.c
        test/test-delayed-accept.c
        test/test-dlerror.c
        test/test-eintr-handling.c
        test/test-embed.c
        test/test-emfile.c
        test/test-env-vars.c
        test/test-error.c
        test/test-fail-always.c
        test/test-fork.c
        test/test-fs-copyfile.c
        test/test-fs-event.c
        test/test-fs-poll.c
        test/test-fs.c
        test/test-get-currentexe.c
        test/test-get-loadavg.c
        test/test-get-memory.c
        test/test-get-passwd.c
        test/test-getaddrinfo.c
        test/test-gethostname.c
        test/test-getnameinfo.c
        test/test-getsockname.c
        test/test-getters-setters.c
        test/test-handle-fileno.c
        test/test-homedir.c
        test/test-hrtime.c
        test/test-idle.c
        test/test-ip4-addr.c
        test/test-ip6-addr.c
        test/test-ipc-send-recv.c
        test/test-ipc.c
        test/test-list.h
        test/test-loop-alive.c
        test/test-loop-close.c
        test/test-loop-configure.c
        test/test-loop-handles.c
        test/test-loop-stop.c
        test/test-loop-time.c
        test/test-multiple-listen.c
        test/test-mutexes.c
        test/test-osx-select.c
        test/test-pass-always.c
        test/test-ping-pong.c
        test/test-pipe-bind-error.c
        test/test-pipe-close-stdout-read-stdin.c
        test/test-pipe-connect-error.c
        test/test-pipe-connect-multiple.c
        test/test-pipe-connect-prepare.c
        test/test-pipe-getsockname.c
        test/test-pipe-pending-instances.c
        test/test-pipe-sendmsg.c
        test/test-pipe-server-close.c
        test/test-pipe-set-fchmod.c
        test/test-pipe-set-non-blocking.c
        test/test-platform-output.c
        test/test-poll-close-doesnt-corrupt-stack.c
        test/test-poll-close.c
        test/test-poll-closesocket.c
        test/test-poll-oob.c
        test/test-poll.c
        test/test-process-title-threadsafe.c
        test/test-process-title.c
        test/test-queue-foreach-delete.c
        test/test-ref.c
        test/test-run-nowait.c
        test/test-run-once.c
        test/test-semaphore.c
        test/test-shutdown-close.c
        test/test-shutdown-eof.c
        test/test-shutdown-twice.c
        test/test-signal-multiple-loops.c
        test/test-signal.c
        test/test-socket-buffer-size.c
        test/test-spawn.c
        test/test-stdio-over-pipes.c
        test/test-tcp-alloc-cb-fail.c
        test/test-tcp-bind-error.c
        test/test-tcp-bind6-error.c
        test/test-tcp-close-accept.c
        test/test-tcp-close-while-connecting.c
        test/test-tcp-close.c
        test/test-tcp-connect-error-after-write.c
        test/test-tcp-connect-error.c
        test/test-tcp-connect-timeout.c
        test/test-tcp-connect6-error.c
        test/test-tcp-create-socket-early.c
        test/test-tcp-flags.c
        test/test-tcp-oob.c
        test/test-tcp-open.c
        test/test-tcp-read-stop.c
        test/test-tcp-shutdown-after-write.c
        test/test-tcp-try-write.c
        test/test-tcp-unexpected-read.c
        test/test-tcp-write-after-connect.c
        test/test-tcp-write-fail.c
        test/test-tcp-write-queue-order.c
        test/test-tcp-write-to-half-open-connection.c
        test/test-tcp-writealot.c
        test/test-thread-equal.c
        test/test-thread.c
        test/test-threadpool-cancel.c
        test/test-threadpool.c
        test/test-timer-again.c
        test/test-timer-from-check.c
        test/test-timer.c
        test/test-tmpdir.c
        test/test-tty.c
        test/test-udp-alloc-cb-fail.c
        test/test-udp-bind.c
        test/test-udp-create-socket-early.c
        test/test-udp-dgram-too-big.c
        test/test-udp-ipv6.c
        test/test-udp-multicast-interface.c
        test/test-udp-multicast-interface6.c
        test/test-udp-multicast-join.c
        test/test-udp-multicast-join6.c
        test/test-udp-multicast-ttl.c
        test/test-udp-open.c
        test/test-udp-options.c
        test/test-udp-send-and-recv.c
        test/test-udp-send-hang-loop.c
        test/test-udp-send-immediate.c
        test/test-udp-send-unreachable.c
        test/test-udp-try-send.c
        test/test-walk-handles.c
        test/test-watcher-cross-stop.c)


set(SOURCE_FILES main.cpp)
add_executable(main ${SOURCE_FILES})